# nonebot-plugin-segbuilder

./: README.md  bot.py  func_tests.py  pyproject.toml
docs/: basic_usage.md  compatibility.md
nonebot_plugin_segbuilder/: __init__.py  base.py  utils.py
nonebot_plugin_segbuilder/adapters/: mirai2.py  onebot_v11.py  onebot_v12.py  qqguild.py
nonebot_plugin_segbuilder/adapters/archive/: kaiheila.py
